# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.1168 2010-02-26 11:53:23 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

2.5.0 beta1 (????/??/??)
 - (2010/02/23) Fixed bug#4957 - Password Change dialog misses "Current Password"
    option.
 - (2010/02/22) Fixed bug#5020 - Framework version for stats export is outdated.
 - (2010/02/21) Extended QueryCondition() of Kernel::System::DB to allow
    also "some praise" expression as "some&&praise", to be compat. just add
    "Extended => 1" to QueryCondition(). Short summary:
        some praise   -> search for "some" and "praise" in a text (order of words
                         is not importand)
        "some praise" -> search for "some praise" in a text as one string
 - (2010/02/16) Extended QueryCondition() of Kernel::System::DB to allow
    also "some praise" expression for search conditions to search this string
    1:1 in database.
 - (2010/02/15) Added "New Article" feature. Shows any agent in dashboard and
    global ticket overviews if there is a new article in a ticket which is not
    seen (like unread feature in email clients).
    Notice: Use scripts/DBUpdate-to-2.5.*.sql for upgrading!
 - (2010/02/15) Removed example config files for Apache1, switched to only
    one config file for Apache2 instead of two.
 - (2010/02/15) Fixed bug#4924 - Incorrect email address syntax check.
 - (2010/02/10) Fixed bug#2376 - Customer preferences are lost after update
    of customer login.
 - (2010/02/10) Fixed bug#4828 - In SysConfig, changed "Registration" to
    "Registrierung" in German description.
 - (2010/02/07) Fixed bug#4918 - Delete only expired cache items by using
    e. g. "bin/otrs.CacheDelete.pl --expired".